# Producto-NLP

./: .gitignore  README.md  README_POETRY.md  mlflow.db  pyproject.toml  render.yaml  run_info.json
data/: claude_vs_combined_comparison.csv  claude_vs_combined_metrics.csv  resultados_claude_code.csv
experiments/: claude_vs_combined_eval.ipynb  pr_feature_ablation.ipynb
mcp-pr-predictor/: .gitignore  extract_pr_features.py  render.yaml  requirements.txt
mcp-pr-predictor/mcp_server/: dashboard.py  predictor.py  runtime_settings.py  server.py  storage.py  transforms.py
mcp-pr-predictor/models/: feature_meta.json  registry.json  xgb_final.pkl  xgb_repo_split.pkl
mlruns/1/c400c5b68c414682bce9467e8e158bb4/artifacts/inputs/: hyperparams.yml
mlruns/1/c400c5b68c414682bce9467e8e158bb4/artifacts/models/model_combined/: MLmodel  conda.yaml  model.ubj
mlruns/1/c400c5b68c414682bce9467e8e158bb4/artifacts/models/model_pr_dataset_only/: MLmodel  model.ubj
mlruns/1/c400c5b68c414682bce9467e8e158bb4/artifacts/models/model_pr_features_only/: MLmodel  model.ubj
mlruns/1/c400c5b68c414682bce9467e8e158bb4/artifacts/results/: metric_deltas.csv  metrics.csv  source_contribution.csv
pipeline/: __init__.py  agent_extract_features.py  agent_update_card.py  agents.py  diff_utils.py  env.py  git_ops.py  github_api.py  llm_client.py  process_block.py  process_pr.py  prompts.py  schemas.py  tool_agent.py  utils.py
scripts/: launch_parallel.py  run_block.py  run_notebook.py
