[project]
name = "tp-producto-nlp"
version = "0.1.0"
description = "Experimentos PR: ablation feature comparison"
authors = [
  { name = "user", email = "user@example.com" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "matplotlib>=3.6",
  "scikit-learn>=1.1",
  "xgboost>=1.7",
  "ipython>=8.0",
  "joblib>=1.2",
  "nbformat>=5.0",
  "nbclient>=0.7",
  "mlflow>=2.0",
  "pyyaml>=6.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
